# ScreenChat

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: releases.yml
ScreenChat/: CMakeLists.txt  main.cpp  main.h
ScreenChat/loader/: loader.cpp  loader.h
