cmake_minimum_required(VERSION 3.3)

MACRO(SUBDIRLIST result curdir)
	FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
	SET(dirlist "")
	FOREACH(child ${children})
	IF(IS_DIRECTORY "${curdir}/${child}")
		IF(EXISTS "${curdir}/${child}/CMakeLists.txt")
			LIST(APPEND dirlist ${child})
		ENDIF()
	ENDIF()
	ENDFOREACH()
	SET(${result} ${dirlist})
ENDMACRO()

get_filename_component(PROJECT_NAME ${CMAKE_SOURCE_DIR} NAME)
project(${PROJECT_NAME})

option(DXHOOK "Use full DirectX hook [ON/OFF]" OFF)
option(DRAWHOOK "Use DrawHook hook [ON/OFF]" ON)
if(DXHOOK)
	ADD_DEFINITIONS(-DFULL_DX_HOOK=1)
endif()
if(DRAWHOOK)
	ADD_DEFINITIONS(-DUSE_DRAW_HOOK=1)
endif()

set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME ON)
find_package(Boost 1.60.0 COMPONENTS coroutine)
if(Boost_FOUND)
	ADD_DEFINITIONS(-DWITH_BOOST_CORO=1)
	include_directories(${Boost_INCLUDE_DIRS})
endif(Boost_FOUND)

if ("$ENV{DXSDK_DIR}" STREQUAL "")
	if (MSVC)
		message("Please install DirectX SDK before compiling this project")
		set(D3DX9 OFF)
	else()
		set(D3DX9 ON)
	endif()
else()
	include_directories("$ENV{DXSDK_DIR}/Include")
	link_directories("$ENV{DXSDK_DIR}/Lib/x86")
	add_definitions(-DDXSDK_FOR_VS=1)
	set(D3DX9 ON)
endif()

IF(NOT IS_DIRECTORY "${CMAKE_SOURCE_DIR}/.git")
	execute_process(COMMAND git init WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	execute_process(COMMAND git add CMakeLists.txt third-party .clang-format .gitignore WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	IF(IS_DIRECTORY "${CMAKE_SOURCE_DIR}/${PROJECT_NAME}")
		execute_process(COMMAND git add ${PROJECT_NAME} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	ENDIF()
	ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/third-party)
ELSE()
	ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/third-party)
	execute_process(COMMAND git remote get-url origin WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} OUTPUT_VARIABLE GIT_URL)
	IF("${GIT_URL}" MATCHES "prime-hack/samp/plugins/templates/AsiPlugin")
		message("Match default template repo. Modify for project ${PROJECT_NAME}")
		if(EXISTS "${CMAKE_SOURCE_DIR}/README.md")
			execute_process(COMMAND git rm -rf README.md lib.png wizard.json WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
		endif()
		if(IS_DIRECTORY "${CMAKE_SOURCE_DIR}/AsiPlugin")
			execute_process(COMMAND git mv AsiPlugin ${PROJECT_NAME} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
		endif()
		execute_process(COMMAND git remote remove origin WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
		execute_process(COMMAND git config --global init.defaultBranch WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} OUTPUT_VARIABLE GIT_BRANCH)
		if("${GIT_BRANCH}" STREQUAL "")
			set(GIT_BRANCH "main")
		else()
			string(REPLACE "r" "" GIT_BRANCH "${GIT_BRANCH}")
			string(REPLACE "
" "" GIT_BRANCH "${GIT_BRANCH}")
		endif()
		execute_process(COMMAND git branch -m ${GIT_BRANCH} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
		execute_process(COMMAND git commit -m "Initial project ${PROJECT_NAME}" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	ENDIF()
ENDIF()

SUBDIRLIST(SUBDIRS3rd ${CMAKE_SOURCE_DIR}/third-party)
include_directories(${SUBDIRS3rd})
FOREACH(subdir ${SUBDIRS3rd})
	include_directories(${CMAKE_SOURCE_DIR}/third-party/${subdir})
ENDFOREACH()

SUBDIRLIST(SUBDIRS ${CMAKE_SOURCE_DIR})
include_directories(${SUBDIRS})
FOREACH(subdir ${SUBDIRS})
	if (NOT "${subdir}" STREQUAL "third-party")
		ADD_SUBDIRECTORY(${subdir})
		message("Including ${subdir}")
	endif()
ENDFOREACH()
